#6 [edit .gitpod.yml] コマンドの実行方法を改善

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -9,5 +9,5 @@ image:
 
 tasks:
   - init: 'npm install'
-    command: 'npm run dev && npx prisma studio'
-
+    command: 'npm run dev'
+  - command: 'npx prisma studio'
