--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "@vueuse/core": "^11.2.0",
     "@vueuse/nuxt": "^11.2.0",
     "nuxt": "^3.13.2",
+    "uuid": "^11.0.3",
     "vue": "latest",
-    "vue-router": "latest"
+    "vue-router": "latest",
+    "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
     "@nuxtjs/i18n": "^9.0.0",
     "@nuxtjs/tailwindcss": "^6.12.2",
+    "@types/uuid": "^10.0.0",
     "daisyui": "^4.12.14",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.9",
